rework error reporting
